--- a/browser/40_브라우저 제어하기_배포.ipynb
+++ b/browser/40_브라우저 제어하기_배포.ipynb
@@ -148,16 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<selenium.webdriver.remote.webelement.WebElement (session=\"e0050271916a2b5f1dec91d095794df5\", element=\"f.B21D235575BC03EE28FCA882381A7384.d.8BE64821EA68E2A8C74E5EE7ADAB1B23.e.4694\")>\n",
-      "<selenium.webdriver.remote.webelement.WebElement (session=\"5792f88f385764ca8b129bc6100f5784\", element=\"f.4688F0260A1606FFD24D757D59D2749D.d.27FC33649D9610F82B8C1AFBF23AF7E7.e.95\")>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[<selenium.webdriver.remote.webelement.WebElement (session=\"e0050271916a2b5f1dec91d095794df5\", element=\"f.B21D235575BC03EE28FCA882381A7384.d.819518AF85606A21ECF5CFD8EA9B0208.e.19174\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"5792f88f385764ca8b129bc6100f5784\", element=\"f.4688F0260A1606FFD24D757D59D2749D.d.2BBC6C531BB77240DE38897D8F5FF9E3.e.320\")>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -168,9 +171,15 @@
     "    d.get('https://www.naver.com')\n",
     "\n",
     "# 검색창 선택하기\n",
+    "search = []\n",
     "for d in drivers:\n",
-    "    search = d.find_element(By.CSS_SELECTOR, '#query')\n",
-    "    print(search)"
+    "    s = d.find_element(By.CSS_SELECTOR, '#query')\n",
+    "    # 아래 코드와 동일합니다.\n",
+    "    # search = d.find_element(By.ID, 'query')\n",
+    "    \n",
+    "    search.append(s)\n",
+    "\n",
+    "search"
    ]
   },
   {
