인공지능 검색

--- a/browser/40_브라우저 제어하기_배포.ipynb
+++ b/browser/40_브라우저 제어하기_배포.ipynb
@@ -199,7 +199,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 검색창 클릭\n"
+    "# 검색창 클릭\n",
+    "for s in search:\n",
+    "    s.click()"
    ]
   },
   {
@@ -208,7 +210,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 검색어 입력\n"
+    "# 검색어 입력\n",
+    "for s in search:\n",
+    "    s.send_keys('인공지능')"
    ]
   },
   {
