요소 제어 끝

--- a/browser/40_브라우저 제어하기_배포.ipynb
+++ b/browser/40_브라우저 제어하기_배포.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +135,8 @@
     "    d.back()\n",
     "    \n",
     "# 웹드라이버로 생성한 모든 창 종료\n",
-    "# for d in drivers:\n",
-    "    # d.close()"
+    "for d in drivers:\n",
+    "    d.close()"
    ]
   },
   {
@@ -150,23 +150,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<selenium.webdriver.remote.webelement.WebElement (session=\"e3bf8fdad18e399a34264ec5eb6b9c69\", element=\"f.A53E7D525CA85F8FC583A24501160B8F.d.0FAB1C7C3E9FA14FAACE017CEB63E743.e.98\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"36c90cf42eee87807c7b41ab403f96c8\", element=\"f.E132AFD8BF51BD3173B76B9B26EB81FF.d.0A67D6B60CE23826CA941F0AEF94F2E5.e.3\")>]"
+       "[<selenium.webdriver.remote.webelement.WebElement (session=\"2295cb172206b27081a9b6a03a6941b3\", element=\"f.EFE1475D6D88218303BE09DF6A022192.d.40782FA1CA70E7A68A35B1185BE6DC1E.e.99\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"1324de9690088da624d12f3bf279c13a\", element=\"f.1507B7284675AD2813B1A73E543000F5.d.AB87840E85AE365E135B190938EE8019.e.3\")>]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "# 웹 드라이버 객체 생성\n",
+    "chrome_driver = Chrome()\n",
+    "edge_driver = Edge()\n",
+    "drivers = [chrome_driver, edge_driver]\n",
     "\n",
     "# 이동하기 (http://www.naver.com)\n",
     "for d in drivers:\n",
@@ -195,42 +200,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 검색창 클릭\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "\n",
     "for s in search:\n",
-    "    s.click()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 검색어 입력\n",
+    "    s.click()\n",
+    "    s.send_keys('인공지능\\n')\n",
+    "\n",
+    "\"\"\" \n",
+    "# 이렇게도 할 수 있습니다.\n",
+    "\n",
     "for s in search:\n",
-    "    s.send_keys('인공지능')"
+    "    s.click()\n",
+    "    s.send_keys('인공지능')\n",
+    "    s.send_keys(Keys.ENTER)\n",
+    "\"\"\";"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 엔터키 입력\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 브라우저 닫기"
+    "# 브라우저 닫기\n",
+    "for d in drivers:\n",
+    "    d.quit()"
    ]
   }
  ],
