네이버증권

--- a/browser/40_브라우저 제어하기_배포.ipynb
+++ b/browser/40_브라우저 제어하기_배포.ipynb
@@ -80,9 +80,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## ✅ Selenium"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 📟 웹 드라이버 객체 생성\n",
-    "- 웹 드라이버 : 브라우저 조작을 위한 도구\n",
-    "- selenium의 webdriver 모듈에서 Chrome 브라우저를 제어하기 위한 클래스 제공"
+    "- 웹 드라이버 : 브라우저 조작을 위한 도구입니다.\n",
+    "- `selenium.webdriver` 모듈에서 다양한 브라우저를 제어하기 위한 클래스를 제공합니다.\n",
+    "- Chrome, Edge는 모두 Chromium 엔진 기반 브라우저이기 때문에 사용법이 동일합니다."
    ]
   },
   {
@@ -230,6 +238,102 @@
     "for d in drivers:\n",
     "    d.quit()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 💸 네이버페이 증권 실습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium.webdriver import Chrome, Edge\n",
+    "\n",
+    "url = 'https://finance.naver.com/news/mainnews.naver'\n",
+    "\n",
+    "# driver = Chrome()\n",
+    "# 저는 엣지를 사용하겠습니다.\n",
+    "driver = Edge()\n",
+    "driver.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'subject': '기다리던 엔비디아 HBM 납품 소식인데…삼성전자, 2%대 하락[핫종목]',\n",
+       " 'summary': '삼성전자(005930)가 엔비디아에 5세대 고대역폭메모리(HBM) HBM3E 8단 제품을 납품했다는 소식에도 31일 하락 중이다. 이날.. 뉴스1 | 2025-01-31 09:34:41',\n",
+       " 'press': '뉴스1',\n",
+       " 'wdate': '2025-01-31 09:34:41'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'subject': '기다리던 엔비디아 HBM 납품 소식인데…삼성전자, 2%대 하락[핫종목]',\n",
+       " 'summary': '삼성전자(005930)가 엔비디아에 5세대 고대역폭메모리(HBM) HBM3E 8단 제품을 납품했다는 소식에도 31일 하락 중이다. 이날.. 뉴스1 | 2025-01-31 09:34:41',\n",
+       " 'press': '뉴스1',\n",
+       " 'wdate': '2025-01-31 09:34:41'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'subject': '기다리던 엔비디아 HBM 납품 소식인데…삼성전자, 2%대 하락[핫종목]',\n",
+       " 'summary': '삼성전자(005930)가 엔비디아에 5세대 고대역폭메모리(HBM) HBM3E 8단 제품을 납품했다는 소식에도 31일 하락 중이다. 이날.. 뉴스1 | 2025-01-31 09:34:41',\n",
+       " 'press': '뉴스1',\n",
+       " 'wdate': '2025-01-31 09:34:41'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "raw_articles = driver.find_elements(By.CSS_SELECTOR, '.block1')\n",
+    "articles = []\n",
+    "\n",
+    "for article in raw_articles:\n",
+    "    subject = article.find_element(By.CSS_SELECTOR, '.articleSubject').text\n",
+    "    summary = article.find_element(By.CSS_SELECTOR, '.articleSummary').text\n",
+    "    press = article.find_element(By.CSS_SELECTOR, '.press').text\n",
+    "    wdate = article.find_element(By.CSS_SELECTOR, '.wdate').text\n",
+    "    \n",
+    "    data = {\n",
+    "        'subject': subject,\n",
+    "        'summary': summary,\n",
+    "        'press': press,\n",
+    "        'wdate': wdate\n",
+    "    }\n",
+    "    articles.append(data)\n",
+    "\n",
+    "for article in articles[:3]:\n",
+    "    display(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
