--- a/browser/40_브라우저 제어하기_배포.ipynb
+++ b/browser/40_브라우저 제어하기_배포.ipynb
@@ -407,7 +407,10 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "# 각각의 기사에 대한 정보의 열 이름이 dict의 키값에 들어가있으므로 \n",
+    "# DataFrame이 알잘딱 생성해줍니다 ~.~\n",
     "df = pd.DataFrame(articles)\n",
+    "\n",
     "df.to_csv('./data/finance.csv', encoding='utf-8', index=False)\n",
     "df.to_excel('./data/finance.xlsx')\n",
     "df.head()"
