--- a/browser/40_브라우저 제어하기_배포.ipynb
+++ b/browser/40_브라우저 제어하기_배포.ipynb
@@ -266,16 +266,7 @@
    "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from selenium.webdriver import Chrome, Edge\n",
-    "\n",
-    "url = 'https://finance.naver.com/news/mainnews.naver'\n",
-    "\n",
-    "# driver = Chrome()\n",
-    "# 저는 엣지를 사용하겠습니다.\n",
-    "driver = Edge()\n",
-    "driver.get(url)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -286,17 +277,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "def scrap_articles(driver, url):\n",
+    "    driver.get(url)\n",
+    "    \n",
+    "    raw_articles = driver.find_elements(By.CSS_SELECTOR, '.block1')\n",
+    "    articles = []\n",
+    "\n",
+    "    for article in raw_articles:\n",
+    "        subject = article.find_element(By.CSS_SELECTOR, '.articleSubject').text\n",
+    "        summary = article.find_element(By.CSS_SELECTOR, '.articleSummary').text\n",
+    "        press = article.find_element(By.CSS_SELECTOR, '.press').text\n",
+    "        wdate = article.find_element(By.CSS_SELECTOR, '.wdate').text\n",
+    "        link = article.find_element(By.CSS_SELECTOR, '.articleSubject>a').get_attribute('href')\n",
+    "        \n",
+    "        data = {\n",
+    "            'subject': subject,\n",
+    "            'summary': summary,\n",
+    "            'press': press,\n",
+    "            'wdate': wdate,\n",
+    "            'link': link\n",
+    "        }\n",
+    "        articles.append(data)\n",
+    "    \n",
+    "    return articles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'subject': '기다리던 엔비디아 HBM 납품 소식인데…삼성전자, 2%대 하락[핫종목]',\n",
-       " 'summary': '삼성전자(005930)가 엔비디아에 5세대 고대역폭메모리(HBM) HBM3E 8단 제품을 납품했다는 소식에도 31일 하락 중이다. 이날.. 뉴스1 | 2025-01-31 09:34:41',\n",
-       " 'press': '뉴스1',\n",
-       " 'wdate': '2025-01-31 09:34:41',\n",
-       " 'link': 'https://n.news.naver.com/mnews/article/421/0008047854'}"
+       "{'subject': \"저가매수 타이밍? '딥시크 타격' HD현대일렉트릭 순매수 1위[주식 초고수는 지금]\",\n",
+       " 'summary': '미래에셋증권(006800)에서 거래하는 고수익 투자자들이 24일 오전 가장 많이 순매수한 종목은 HD현대일렉트릭(267260)으로 나타.. 서울경제 | 2025-01-31 11:53:10',\n",
+       " 'press': '서울경제',\n",
+       " 'wdate': '2025-01-31 11:53:10',\n",
+       " 'link': 'https://n.news.naver.com/mnews/article/011/0004445246'}"
       ]
      },
      "metadata": {},
@@ -305,11 +329,11 @@
     {
      "data": {
       "text/plain": [
-       "{'subject': '기다리던 엔비디아 HBM 납품 소식인데…삼성전자, 2%대 하락[핫종목]',\n",
-       " 'summary': '삼성전자(005930)가 엔비디아에 5세대 고대역폭메모리(HBM) HBM3E 8단 제품을 납품했다는 소식에도 31일 하락 중이다. 이날.. 뉴스1 | 2025-01-31 09:34:41',\n",
-       " 'press': '뉴스1',\n",
-       " 'wdate': '2025-01-31 09:34:41',\n",
-       " 'link': 'https://n.news.naver.com/mnews/article/421/0008047854'}"
+       "{'subject': '딥시크발 ‘딥쇼크’… SK하이닉스 장중 11% 급락',\n",
+       " 'summary': '코스피 전체는 0.1% 하락 출발 한미반도체 6%·삼성전자 2%↓ 인프라 관련 투자 감소 우려에 전력기기 종목들도 낙폭 커져 미국 3대.. 문화일보 | 2025-01-31 11:47:31',\n",
+       " 'press': '문화일보',\n",
+       " 'wdate': '2025-01-31 11:47:31',\n",
+       " 'link': 'https://n.news.naver.com/mnews/article/021/0002687009'}"
       ]
      },
      "metadata": {},
@@ -318,11 +342,11 @@
     {
      "data": {
       "text/plain": [
-       "{'subject': '기다리던 엔비디아 HBM 납품 소식인데…삼성전자, 2%대 하락[핫종목]',\n",
-       " 'summary': '삼성전자(005930)가 엔비디아에 5세대 고대역폭메모리(HBM) HBM3E 8단 제품을 납품했다는 소식에도 31일 하락 중이다. 이날.. 뉴스1 | 2025-01-31 09:34:41',\n",
-       " 'press': '뉴스1',\n",
-       " 'wdate': '2025-01-31 09:34:41',\n",
-       " 'link': 'https://n.news.naver.com/mnews/article/421/0008047854'}"
+       "{'subject': 'SEC, 비트코인·이더리움 혼합 ETF 승인…알트코인 ETF 출시 가속화 기대',\n",
+       " 'summary': '비트와이즈, 도지코인 ETF도 신청 미국에서 가상자산을 담고 있는 상장지수펀드(ETF) 출시가 탄력을 받고 있다. 이에 따라 알트코인 .. 매일경제 | 2025-01-31 11:45:08',\n",
+       " 'press': '매일경제',\n",
+       " 'wdate': '2025-01-31 11:45:08',\n",
+       " 'link': 'https://n.news.naver.com/mnews/article/009/0005436313'}"
       ]
      },
      "metadata": {},
@@ -330,29 +354,15 @@
     }
    ],
    "source": [
-    "from selenium.webdriver.common.by import By\n",
+    "# driver = Chrome()\n",
+    "# 저는 엣지를 사용하겠습니다.\n",
+    "driver = Edge()\n",
+    "url = 'https://finance.naver.com/news/mainnews.naver'\n",
     "\n",
-    "raw_articles = driver.find_elements(By.CSS_SELECTOR, '.block1')\n",
-    "articles = []\n",
-    "\n",
-    "for article in raw_articles:\n",
-    "    subject = article.find_element(By.CSS_SELECTOR, '.articleSubject').text\n",
-    "    summary = article.find_element(By.CSS_SELECTOR, '.articleSummary').text\n",
-    "    press = article.find_element(By.CSS_SELECTOR, '.press').text\n",
-    "    wdate = article.find_element(By.CSS_SELECTOR, '.wdate').text\n",
-    "    link = article.find_element(By.CSS_SELECTOR, '.articleSubject>a').get_attribute('href')\n",
-    "    \n",
-    "    data = {\n",
-    "        'subject': subject,\n",
-    "        'summary': summary,\n",
-    "        'press': press,\n",
-    "        'wdate': wdate,\n",
-    "        'link': link\n",
-    "    }\n",
-    "    articles.append(data)\n",
+    "articles = scrap_articles(driver, url)\n",
     "\n",
     "for article in articles[:3]:\n",
-    "    display(data)"
+    "    display(article)"
    ]
   },
   {
@@ -507,11 +517,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 📅 입력한 날짜의 기사 스크랩"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "검색할 날짜(yyyy-MM-DD): 2024-11-21\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'subject': '\"엔비디아, 시가총액 5조달러 합리적으로 기대 가능\"-NH',\n",
+       " 'summary': '엔비디아 시가총액이 5조달러(약 6981조원)에 달할 수 있다는 관측이 나왔다. 현 주가에서 39%대 상승 여력이 있다고 본 것이다. .. 머니투데이 | 2024-11-21 23:03:06',\n",
+       " 'press': '머니투데이',\n",
+       " 'wdate': '2024-11-21 23:03:06',\n",
+       " 'link': 'https://n.news.naver.com/mnews/article/008/0005117838'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'subject': '“기대가 너무 컸나”…엔비디아 실적 선방했지만 반도체 주가는 시들',\n",
+       " 'summary': '엔비디아 3분기 매출 94% 증가 지속성장세 의문에 시간외 2.5% 뚝 SK하이닉스 하루만에 1% 떨어져 반도체 업종 주가 가늠자로 통.. 매일경제 | 2024-11-21 22:56:08',\n",
+       " 'press': '매일경제',\n",
+       " 'wdate': '2024-11-21 22:56:08',\n",
+       " 'link': 'https://n.news.naver.com/mnews/article/009/0005400906'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'subject': '갑질에도 왜 가만히 있나 했더니…구글-게임사 담합…\"7천억 원 부당 수익\"',\n",
+       " 'summary': '지난해 구글이 다른 앱스토어에 게임을 출시하지 못하도록 부당한 압력을 넣었다는 사실이 밝혀졌는데요. 이번에는 구글과 일부 게임사가 단독.. MBN | 2024-11-21 20:18:15',\n",
+       " 'press': 'MBN',\n",
+       " 'wdate': '2024-11-21 20:18:15',\n",
+       " 'link': 'https://n.news.naver.com/mnews/article/057/0001855252'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hint = '검색할 날짜(yyyy-MM-DD):'\n",
+    "date = input(hint)\n",
+    "print(hint, date)\n",
+    "\n",
+    "url = f'https://finance.naver.com/news/mainnews.naver?date={date}'\n",
+    "\n",
+    "articles = scrap_articles(driver, url)\n",
+    "\n",
+    "for article in articles[:3]:\n",
+    "    display(article)"
+   ]
   }
  ],
  "metadata": {
