모든 페이지 스크랩

--- a/browser/40_브라우저 제어하기_배포.ipynb
+++ b/browser/40_브라우저 제어하기_배포.ipynb
@@ -258,44 +258,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 📖 페이지 방문"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### ✂️ 스크랩"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium.webdriver.common.by import By\n",
     "\n",
     "def scrap_articles(driver, url):\n",
+    "    # url이 가리키는 페이지로 이동합니다.\n",
     "    driver.get(url)\n",
     "    \n",
+    "    # 페이지에서 .block1 클래스를 가진 모든 요소를 리스트로 받습니다.\n",
     "    raw_articles = driver.find_elements(By.CSS_SELECTOR, '.block1')\n",
     "    articles = []\n",
     "\n",
+    "    # .block1 클래스를 가진 요소 안에서 다른 요소들을 찾아 데이터를 구성합니다.\n",
     "    for article in raw_articles:\n",
     "        subject = article.find_element(By.CSS_SELECTOR, '.articleSubject').text\n",
     "        summary = article.find_element(By.CSS_SELECTOR, '.articleSummary').text\n",
     "        press = article.find_element(By.CSS_SELECTOR, '.press').text\n",
     "        wdate = article.find_element(By.CSS_SELECTOR, '.wdate').text\n",
     "        link = article.find_element(By.CSS_SELECTOR, '.articleSubject>a').get_attribute('href')\n",
-    "        \n",
+    "\n",
     "        data = {\n",
     "            'subject': subject,\n",
     "            'summary': summary,\n",
@@ -310,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -587,6 +576,104 @@
     "for article in articles[:3]:\n",
     "    display(article)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 📖 모든 페이지 스크랩"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "검색할 날짜(yyyy-MM-DD): 2025-1-1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'subject': '상장 미뤘더니 탄핵정국 한파…공모주 될 곳만 된다',\n",
+       " 'summary': '이 기사는 2025년01월01일 21시14분에 마켓인 프리미엄 콘텐츠로 선공개 되었습니다. 2025년 기업공개(IPO) 시장 분위기는 .. 이데일리 | 2025-01-01 23:15:09',\n",
+       " 'press': '이데일리',\n",
+       " 'wdate': '2025-01-01 23:15:09',\n",
+       " 'link': 'https://n.news.naver.com/mnews/article/018/0005916847'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'subject': '“서학개미는 이 앱 무조건 깔겠네”…美증시 동향, 비서가 즉각 보고해준다는데',\n",
+       " 'summary': '매경 월가월부, 언론사 최초 AI 투자정보 서비스 서학개미 관심 기업 400여곳 텔레그램서 美주식정보 제공 월가 의견·지분 변동 알려줘.. 매일경제 | 2025-01-01 20:17:07',\n",
+       " 'press': '매일경제',\n",
+       " 'wdate': '2025-01-01 20:17:07',\n",
+       " 'link': 'https://n.news.naver.com/mnews/article/009/0005422481'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'subject': '지난해 120% 오른 비트코인 “올해 두배 간다” 정말?',\n",
+       " 'summary': '전문가들 “기관 유입 증가” 이유로 꼽아 “8만 달러로 하락” 전망도 비트코인이 2024년 100% 넘는 상승률을 기록하면서 상승세가 .. 문화일보 | 2025-01-01 20:03:09',\n",
+       " 'press': '문화일보',\n",
+       " 'wdate': '2025-01-01 20:03:09',\n",
+       " 'link': 'https://n.news.naver.com/mnews/article/021/0002681379'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from selenium.common.exceptions import NoSuchElementException\n",
+    "\n",
+    "hint = '검색할 날짜(yyyy-MM-DD):'\n",
+    "date = input(hint)\n",
+    "print(hint, date)\n",
+    "\n",
+    "url = f'https://finance.naver.com/news/mainnews.naver?date={date}'\n",
+    "page = 1\n",
+    "articles = []\n",
+    "\n",
+    "# 페이지를 1씩 늘리면서 반복합니다.\n",
+    "while True:\n",
+    "    # 페이지가 포함된 url이 가리키는 페이지에 방문하고\n",
+    "    # 그 페이지의 기사를 모두 스크랩 한 다음에\n",
+    "    # 스크랩된 데이터를 articles의 뒤에 덧붙입니다.\n",
+    "    articles.extend(scrap_articles(driver, url + f'&page={page}'))\n",
+    "    \n",
+    "    \n",
+    "    # 만약 [맨뒤] 버튼이 없다면 마지막 페이지이므로 반복문을 탈출합니다.\n",
+    "    try:\n",
+    "        driver.find_element(By.CSS_SELECTOR, '.pgRR')\n",
+    "    except NoSuchElementException:\n",
+    "        break\n",
+    "    \n",
+    "    # 위에서 반복문을 탈출하지 않았다면 고오오냥 바로 다음 페이지로 ㅋㅋ\n",
+    "    page += 1\n",
+    "\n",
+    "for article in articles[:3]:\n",
+    "    display(article)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
