모든 페이지 스크랩

--- a/browser/40_브라우저 제어하기_배포.ipynb
+++ b/browser/40_브라우저 제어하기_배포.ipynb
@@ -586,37 +586,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "검색할 날짜(yyyy-MM-DD): 2025-1-1\n"
+      "검색할 날짜(yyyy-MM-DD): 2025-01-29\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'subject': '상장 미뤘더니 탄핵정국 한파…공모주 될 곳만 된다',\n",
-       " 'summary': '이 기사는 2025년01월01일 21시14분에 마켓인 프리미엄 콘텐츠로 선공개 되었습니다. 2025년 기업공개(IPO) 시장 분위기는 .. 이데일리 | 2025-01-01 23:15:09',\n",
-       " 'press': '이데일리',\n",
-       " 'wdate': '2025-01-01 23:15:09',\n",
-       " 'link': 'https://n.news.naver.com/mnews/article/018/0005916847'}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'subject': '“서학개미는 이 앱 무조건 깔겠네”…美증시 동향, 비서가 즉각 보고해준다는데',\n",
-       " 'summary': '매경 월가월부, 언론사 최초 AI 투자정보 서비스 서학개미 관심 기업 400여곳 텔레그램서 美주식정보 제공 월가 의견·지분 변동 알려줘.. 매일경제 | 2025-01-01 20:17:07',\n",
+       "{'subject': '“6만전자 간다” vs “모든 악재는 충분히 반영”…삼성전자 보는 증권가 엇갈린 시선',\n",
+       " 'summary': '코스피 대장주 삼성전자의 주가 향방을 두고 증권가도 좀처럼 갈피를 잡지 못하는 모습이다. 삼성전자의 주가가 최근 크게 하락한 상황이지만.. 매일경제 | 2025-01-29 22:07:08',\n",
        " 'press': '매일경제',\n",
-       " 'wdate': '2025-01-01 20:17:07',\n",
-       " 'link': 'https://n.news.naver.com/mnews/article/009/0005422481'}"
+       " 'wdate': '2025-01-29 22:07:08',\n",
+       " 'link': 'https://n.news.naver.com/mnews/article/009/0005435793'}"
       ]
      },
      "metadata": {},
@@ -625,11 +612,24 @@
     {
      "data": {
       "text/plain": [
-       "{'subject': '지난해 120% 오른 비트코인 “올해 두배 간다” 정말?',\n",
-       " 'summary': '전문가들 “기관 유입 증가” 이유로 꼽아 “8만 달러로 하락” 전망도 비트코인이 2024년 100% 넘는 상승률을 기록하면서 상승세가 .. 문화일보 | 2025-01-01 20:03:09',\n",
-       " 'press': '문화일보',\n",
-       " 'wdate': '2025-01-01 20:03:09',\n",
-       " 'link': 'https://n.news.naver.com/mnews/article/021/0002681379'}"
+       "{'subject': \"젊은 입맛 사로잡은 '우리쌀' 막걸리…역대 최소 쌀 소비 구원투수\",\n",
+       " 'summary': '매년 쌀 소비는 계속 줄어 지난해에도 역대 최저를 기록했죠. 남아도는 쌀 때문에 정부와 농가 모두 고민이 깊은데, 쌀로 만든 막걸리가 .. MBN | 2025-01-29 19:41:06',\n",
+       " 'press': 'MBN',\n",
+       " 'wdate': '2025-01-29 19:41:06',\n",
+       " 'link': 'https://n.news.naver.com/mnews/article/057/0001869087'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'subject': '\"안내방송 못 들어\"…에어부산 \"긴박한 순간, 절차 따랐다\"',\n",
+       " 'summary': '다행히 대형 참사는 막았지만, 당시 기내 승무원들의 대처는 논란이 되고 있습니다. 대피하라는 방송도 없었고 연기가 나온 직후엔 착석하라.. MBN | 2025-01-29 19:16:15',\n",
+       " 'press': 'MBN',\n",
+       " 'wdate': '2025-01-29 19:16:15',\n",
+       " 'link': 'https://n.news.naver.com/mnews/article/057/0001869076'}"
       ]
      },
      "metadata": {},
@@ -665,6 +665,142 @@
     "\n",
     "for article in articles[:3]:\n",
     "    display(article)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(articles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subject</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>press</th>\n",
+       "      <th>wdate</th>\n",
+       "      <th>link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>상장 미뤘더니 탄핵정국 한파…공모주 될 곳만 된다</td>\n",
+       "      <td>이 기사는 2025년01월01일 21시14분에 마켓인 프리미엄 콘텐츠로 선공개 되었...</td>\n",
+       "      <td>이데일리</td>\n",
+       "      <td>2025-01-01 23:15:09</td>\n",
+       "      <td>https://n.news.naver.com/mnews/article/018/000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>“서학개미는 이 앱 무조건 깔겠네”…美증시 동향, 비서가 즉각 보고해준다는데</td>\n",
+       "      <td>매경 월가월부, 언론사 최초 AI 투자정보 서비스 서학개미 관심 기업 400여곳 텔...</td>\n",
+       "      <td>매일경제</td>\n",
+       "      <td>2025-01-01 20:17:07</td>\n",
+       "      <td>https://n.news.naver.com/mnews/article/009/000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>지난해 120% 오른 비트코인 “올해 두배 간다” 정말?</td>\n",
+       "      <td>전문가들 “기관 유입 증가” 이유로 꼽아 “8만 달러로 하락” 전망도 비트코인이 2...</td>\n",
+       "      <td>문화일보</td>\n",
+       "      <td>2025-01-01 20:03:09</td>\n",
+       "      <td>https://n.news.naver.com/mnews/article/021/000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>'과일 강세' 연말 물가…고환율에 위협받는 새해 물가</td>\n",
+       "      <td>지난달 소비자물가는 1.9%로 넉 달 연속 1%를 기록했지만 앞으로가 문제입니다. ...</td>\n",
+       "      <td>MBN</td>\n",
+       "      <td>2025-01-01 19:55:07</td>\n",
+       "      <td>https://n.news.naver.com/mnews/article/057/000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>공사로 300m 줄어든 19번 활주로…동체착륙 활주 거리 짧아졌나</td>\n",
+       "      <td>급박한 상황에서도 동체 착륙은 잘 들어간 것 같았는데, 결국 둔덕에 충돌하면서 대형...</td>\n",
+       "      <td>MBN</td>\n",
+       "      <td>2025-01-01 19:33:07</td>\n",
+       "      <td>https://n.news.naver.com/mnews/article/057/000...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      subject  \\\n",
+       "0                 상장 미뤘더니 탄핵정국 한파…공모주 될 곳만 된다   \n",
+       "1  “서학개미는 이 앱 무조건 깔겠네”…美증시 동향, 비서가 즉각 보고해준다는데   \n",
+       "2             지난해 120% 오른 비트코인 “올해 두배 간다” 정말?   \n",
+       "3               '과일 강세' 연말 물가…고환율에 위협받는 새해 물가   \n",
+       "4        공사로 300m 줄어든 19번 활주로…동체착륙 활주 거리 짧아졌나   \n",
+       "\n",
+       "                                             summary press  \\\n",
+       "0  이 기사는 2025년01월01일 21시14분에 마켓인 프리미엄 콘텐츠로 선공개 되었...  이데일리   \n",
+       "1  매경 월가월부, 언론사 최초 AI 투자정보 서비스 서학개미 관심 기업 400여곳 텔...  매일경제   \n",
+       "2  전문가들 “기관 유입 증가” 이유로 꼽아 “8만 달러로 하락” 전망도 비트코인이 2...  문화일보   \n",
+       "3  지난달 소비자물가는 1.9%로 넉 달 연속 1%를 기록했지만 앞으로가 문제입니다. ...   MBN   \n",
+       "4  급박한 상황에서도 동체 착륙은 잘 들어간 것 같았는데, 결국 둔덕에 충돌하면서 대형...   MBN   \n",
+       "\n",
+       "                 wdate                                               link  \n",
+       "0  2025-01-01 23:15:09  https://n.news.naver.com/mnews/article/018/000...  \n",
+       "1  2025-01-01 20:17:07  https://n.news.naver.com/mnews/article/009/000...  \n",
+       "2  2025-01-01 20:03:09  https://n.news.naver.com/mnews/article/021/000...  \n",
+       "3  2025-01-01 19:55:07  https://n.news.naver.com/mnews/article/057/000...  \n",
+       "4  2025-01-01 19:33:07  https://n.news.naver.com/mnews/article/057/000...  "
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(articles)\n",
+    "\n",
+    "# 출력할 디렉토리를 먼저 생성해줍시다.\n",
+    "os.makedirs('./data', exist_ok=True)\n",
+    "\n",
+    "df.to_csv(f'./data/finance-{date}.csv', encoding='utf-8', index=False)\n",
+    "df.head()"
    ]
   },
   {
